# fishycmd

./: .gitignore  README.md  design  fcmd2.aseprite  stack.yaml  todo  trie.cabal
src/: .Complete.hs.swo  .FileCompleter.hs.swo  Complete.hs  Completer.hs  Draw.hs  FileCompleter.hs  FileTries.hs  Main.hs  Search.hs  StringTries.hs  Trie.hs  TrieState.hs  TrieTests.hs  Update.hs
src/CLI/: Helpers.hs  KeyPress.hs  Loop.hs  Modes.hs  SearchMode.hs  ShellMode.hs  State.hs  Types.hs
src/CLI/ShellMode/: CompletionHandler.hs  Core.hs  Draw.hs  Effect.hs  FishyCommand.hs  InternalAction.hs  Prompt.hs
src/Complete/: Completer.hs  FileCompleter.hs  Git.hs  String.hs  Trie.hs  Types.hs
src/Corext/: AliasCompleter.hs  Helpers.hs
src/Shell/: Command.hs  CompleteHandler.hs  Draw.hs  FishyCommand.hs  Helpers.hs  KeyPress.hs  Loop.hs  Mode.hs  ShellMode.hs  State.hs  Types.hs  Update.hs
src/Shell/ShellMode/: CompletionHandler.hs  Draw.hs  Effect.hs  FishyCommand.hs  InternalAction.hs  Prompt.hs
src/Test/: Trie.hs
