name:                trie
version:             0.1.0.0
synopsis:            A fishy wrapper for cmd
description:         A fishy wrapper for cmd
homepage:            https://github.com/githubuser/trie#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable trie
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3
                     , ansi-terminal >= 0.6.3
                     , process >= 1.4.3
                     , transformers >= 0.5.2
                     , directory == 1.3.0.0
                     , cereal >= 0.5.4.0
                     , bytestring >= 0.10.8.1
                     , optparse-applicative == 0.13.2.0
                     , ListZipper == 1.2.0.2
                     , split >= 0.2.3.2
                     , safe >= 0.3.14
                     , containers == 0.5.7.1
                     , regex-posix >= 0.95.2
                     , terminal-size >= 0.3.2.1
                     , signal >= 0.1.0.3
                     -- , lens >= 4.15.1
                     , QuickCheck >= 2.9.2
  other-modules:       Complete
                     , Complete.FileCompleter
                     , Complete.String
                     , Complete.Trie
                     , Complete.Types
                     , Shell.Draw
                     , Shell.State
                     , Shell.Update
                     , Shell.Command
                     , Shell.KeyPress
                     , Shell.CompleteHandler
                     , Shell.Types
                     , Corext.AliasCompleter
  extra-lib-dirs:      lib
